updated resume link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <p>I'm a full stack web developer with a background in Philosophy. My academic background left me curious about... well, everything, and with this curiosity came a love of learning and solving puzzles; looking deep into an idea's foundation and building it back up stronger, weaving together different threads to create a stronger fabric.</p>
               <p>After some false starts in other fields, I took my passion for anything and everything tech related and have transitioned into web development and coding in general.</p>
               <p>My ability of keeping the bigger picture in mind while focusing on individual pieces translates over well to coding, where every piece is an essential part of the eventual product.</p>
-              <p class="text-center"><a class="btn btn-primary" href="https://drive.google.com/open?id=0BzOq8w6_E4u4MS1jelpmcUx1MnM" target="_blank"><i class="fa fa-download"></i> Download Resume</a></p>
+              <p class="text-center"><a class="btn btn-primary" href="https://drive.google.com/file/d/19KTPqIi-yOcMtyfwmlx3sMRwbNtZFAVG/view?usp=sharing" target="_blank"><i class="fa fa-download"></i> Download Resume</a></p>
             </div>
           </div>
         </div>
