--- a/index.html
+++ b/index.html
@@ -203,6 +203,19 @@
                   <img src="img/portfolio/GoTDeadpoolLogo.jpg" class="img-responsive" alt="GoT Deadpool"> </a> </div>
               </div>
             </div>
+            <div class="col-sm-6 col-md-3 col-lg-3 misc">
+              <div class="portfolio-item">
+                <div class="hover-bg">
+                  <a href="img/portfolio/modernize_page.png" title="<a href='https://taekimm-modernize.herokuapp.com/' target='_blank'>Check it out!</a>"
+                    rel="prettyPhoto">
+                    <div class="hover-text">
+                      <h4>Modernize</h4>
+                      <small>Sample home page created with pure HTML/CSS (no Bootstrap!) </small>
+                    </div>
+                    <img src="img/portfolio/modernize.png" class="img-responsive" alt="Modernize"> </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
