--- a/index.html
+++ b/index.html
@@ -206,13 +206,26 @@
             <div class="col-sm-6 col-md-3 col-lg-3 misc">
               <div class="portfolio-item">
                 <div class="hover-bg">
-                  <a href="img/portfolio/modernize_page.png" title="<a href='https://taekimm-modernize.herokuapp.com/' target='_blank'>Check it out!</a>"
+                  <a href="img/portfolio/modernize_page.png" title="<a href='https://taekimm-frontend.herokuapp.com/modernize' target='_blank'>Check it out!</a>"
                     rel="prettyPhoto">
                     <div class="hover-text">
                       <h4>Modernize</h4>
                       <small>Sample home page created with pure HTML/CSS (no Bootstrap!) </small>
                     </div>
                     <img src="img/portfolio/modernize.png" class="img-responsive" alt="Modernize"> </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-3 col-lg-3 misc">
+              <div class="portfolio-item">
+                <div class="hover-bg">
+                  <a href="img/portfolio/nc_page.jpg" title="<a href='https://taekimm-frontend.herokuapp.com/nc' target='_blank'>Check it out!</a>"
+                    rel="prettyPhoto">
+                    <div class="hover-text">
+                      <h4>Noam Chomsky's Senator Website</h4>
+                      <small>Webpage created for Noam Chomsky(fictional) Senator-ship. Made with Bootstrap 3</small>
+                    </div>
+                    <img src="img/portfolio/nc-icon.png" class="img-responsive" alt="Noam Chomsky, Senator"></a>
                 </div>
               </div>
             </div>
